--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <input type="text" id="username" class="form-control" placeholder="username" />
         <small id="username-error"></small>
 
-        <input type="text" id="email" class="form-control" placeholder="email" />
+        <input type="email" id="email" class="form-control" placeholder="email" />
         <small id="email-error"></small>
 
-        <input type="text" id="password" class="form-control" placeholder="password" />
+        <input type="password" id="password" class="form-control" placeholder="password" />
         <small id="password-error"></small>
 
-        <input type="text" id="cpassword" class="form-control" placeholder="confirm password" />
+        <input type="password" id="cpassword" class="form-control" placeholder="confirm password" />
         <small id="cpassword-error"></small>
 
         <button class="btn btn-primary" onclick="validate()">Submit</button>
